--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -1,7 +1,7 @@
 PART {
     // --- general parameters ---
     name = mumech_MJ2_AR202
-    module = CommandPod
+    module = Part
     author = r4m0n/The_Duck (code) || keptin (part)
 
     // --- asset parameters ---
@@ -34,12 +34,6 @@ PART {
     // --- pod/rcs parameters ---
 
     CrewCapacity = 0
-
-    rotPower = 0
-    linPower = 0
-
-    Kp = 0
-    Kd = 0
 
     vesselType = Probe
 
