Change the AR202 to a Part with no ModuleCommand

--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -1,9 +1,9 @@
 PART {
     // --- general parameters ---
     name = mumech_MJ2_AR202
-    module = CommandPod
+    module = Part
     author = r4m0n/The_Duck (code) || keptin (part)
-
+                                             
     // --- asset parameters ---
     mesh = model.mu
     rescaleFactor = 0.75
@@ -30,30 +30,6 @@ PART {
     angularDrag = 0
     crashTolerance = 6
     maxTemp = 2900
-
-    // --- pod/rcs parameters ---
-
-    CrewCapacity = 0
-
-    rotPower = 0
-    linPower = 0
-
-    Kp = 0
-    Kd = 0
-
-    vesselType = Probe
-
-    MODULE
-    {
-        name = ModuleCommand
-        minimumCrew = 0
-        
-        RESOURCE
-        {
-            name = ElectricCharge
-            rate = 0.005
-        }
-    }
 
     MODULE
     {
