--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -12,6 +12,8 @@ PART {
     node_attach = 0.0, 0.0, 0.0, 1, 0, 0
 
     // --- editor parameters ---
+    TechRequired = start
+    entryCost = 0
     cost = 550
     category = Control
     subcategory = 0
