Added support for selective module unlocking for Career mode

--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -12,7 +12,7 @@ PART {
     node_attach = 0.0, 0.0, 0.0, 1, 0, 0
 
     // --- editor parameters ---
-    TechRequired = automation
+    TechRequired = flightControl
     entryCost = 15000
     cost = 750
     category = Control
@@ -52,6 +52,24 @@ PART {
     MODULE
     {
         name = MechJebCore
+        MechJebLocalSettings {
+            MechJebModuleCustomWindowEditor { unlockTechs = flightControl }
+            MechJebModuleSmartASS { unlockTechs = flightControl }
+            MechJebModuleManeuverPlanner { unlockTechs = advFlightControl }
+            MechJebModuleNodeEditor { unlockTechs = advFlightControl }
+            MechJebModuleTranslatron { unlockTechs = advFlightControl }
+            MechJebModuleWarpHelper { unlockTechs = advFlightControl }
+            MechJebModuleAttitudeAdjustment { unlockTechs = advFlightControl }
+            MechJebModuleThrustWindow { unlockTechs = advFlightControl }
+            MechJebModuleRCSBalancerWindow { unlockTechs = advFlightControl }
+            MechJebModuleRoverWindow { unlockTechs = fieldScience }
+            MechJebModuleAscentGuidance { unlockTechs = unmannedTech }
+            MechJebModuleLandingGuidance { unlockTechs = unmannedTech }
+            MechJebModuleSpaceplaneGuidance { unlockTechs = unmannedTech }
+            MechJebModuleDockingGuidance { unlockTechs = advUnmanned }
+            MechJebModuleRendezvousAutopilotWindow { unlockTechs = advUnmanned }
+            MechJebModuleRendezvousGuidance { unlockTechs = advUnmanned }
+        }
     }
 
     MODULE
