AR202 Part: wrong category name for advUnmanned

--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -198,7 +198,7 @@ PART {
     rescaleFactor = 0.75
 
     // --- editor parameters ---
-    TechRequired = advUnmannedTech
+    TechRequired = advUnmanned
     entryCost = 15000
     cost = 750
     category = none
