--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -25,7 +25,9 @@ PART {
     attachRules = 0,1,0,0,0
 
     // --- standard part parameters ---
-    mass = 0.00001
+    mass = 0.001
+	thermalMassModifier = 10
+	skinThermalMassModifier = 10
     dragModelType = default
     maximum_drag = 0.0
     minimum_drag = 0.0
