Deactivate the pod leg for now

--- a/Parts/MechJeb2_Pod/part.cfg
+++ b/Parts/MechJeb2_Pod/part.cfg
@@ -198,51 +198,51 @@ PART {
         jettisonDirection = 0 0 1
     }
 
-    MODULE
-    {
-        name = ModuleLandingLeg
-        animationName = Legs_Extend
-        wheelColliderName = wheel1
-        suspensionTransformName = Leg001
-        suspensionUpperLimit = 14.3
-        impactTolerance = 300
-        suspensionSpring = 10
-        suspensionDamper = 1
-    }
-
-    MODULE
-    {
-        name = ModuleLandingLeg
-        animationName = Legs_Extend
-        wheelColliderName = wheel2
-        suspensionTransformName = Leg002
-        suspensionUpperLimit = 14.3
-        impactTolerance = 300
-        suspensionSpring = 10
-        suspensionDamper = 1
-    }
-
-    MODULE
-    {
-        name = ModuleLandingLeg
-        animationName = Legs_Extend
-        wheelColliderName = wheel3
-        suspensionTransformName = Leg003
-        suspensionUpperLimit = 14.3
-        impactTolerance = 300
-        suspensionSpring = 10
-        suspensionDamper = 1
-    }
-
-    MODULE
-    {
-        name = ModuleLandingLeg
-        animationName = Legs_Extend
-        wheelColliderName = wheel4
-        suspensionTransformName = Leg004
-        suspensionUpperLimit = 14.3
-        impactTolerance = 300
-        suspensionSpring = 10
-        suspensionDamper = 1
-    }
+    //MODULE
+    //{
+    //    name = ModuleLandingLeg
+    //    animationName = Legs_Extend
+    //    wheelColliderName = wheel1
+    //    suspensionTransformName = Leg001
+    //    suspensionUpperLimit = 14.3
+    //    impactTolerance = 300
+    //    suspensionSpring = 10
+    //    suspensionDamper = 1
+    //}
+    //
+    //MODULE
+    //{
+    //    name = ModuleLandingLeg
+    //    animationName = Legs_Extend
+    //    wheelColliderName = wheel2
+    //    suspensionTransformName = Leg002
+    //    suspensionUpperLimit = 14.3
+    //    impactTolerance = 300
+    //    suspensionSpring = 10
+    //    suspensionDamper = 1
+    //}
+    //
+    //MODULE
+    //{
+    //    name = ModuleLandingLeg
+    //    animationName = Legs_Extend
+    //    wheelColliderName = wheel3
+    //    suspensionTransformName = Leg003
+    //    suspensionUpperLimit = 14.3
+    //    impactTolerance = 300
+    //    suspensionSpring = 10
+    //    suspensionDamper = 1
+    //}
+    //
+    //MODULE
+    //{
+    //    name = ModuleLandingLeg
+    //    animationName = Legs_Extend
+    //    wheelColliderName = wheel4
+    //    suspensionTransformName = Leg004
+    //    suspensionUpperLimit = 14.3
+    //    impactTolerance = 300
+    //    suspensionSpring = 10
+    //    suspensionDamper = 1
+    //}
 }
