Hide the pod to stop the complains about the explosion (Wheels/Legs related)

--- a/Parts/MechJeb2_Pod/part.cfg
+++ b/Parts/MechJeb2_Pod/part.cfg
@@ -30,7 +30,7 @@ PART {
     TechRequired = automation
     entryCost = 250000
     cost = 35000
-    category = Pods
+    category = none
     subcategory = 0
     title = Mechanical Jeb - Pod version 2.0
     manufacturer = Anatid Robotics / Multiversal Mechatronics
