--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+/MechJeb2/Todo.txt
+
+/MechJeb2/MechJeb2.sln
+
+
+/MechJeb2/MechJeb2.csproj
+Thumbs.db
+
+/MechJeb2-Unity/Library/
+/MechJeb2-Unity/*.csproj
+
+*.sln
+
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
@@ -111,11 +125,3 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-/MechJeb2/Todo.txt
-
-/MechJeb2/MechJeb2.sln
-
-/MechJeb2/MechJeb2.csproj
-Thumbs.db
-
-*.sln
