Rewriting approach and autoland code to perform more reliably using the new autopilot features.

--- a/LandingSites.cfg
+++ b/LandingSites.cfg
@@ -20,8 +20,27 @@ MechJeb2Landing
 	{
 		Runway	
 		{
-			name = KSC runway
-			// body = "Kerbin" // if not set defaults to the starting world (Kerbin, Earth for RSS)
+			name = KSC Runway 09
+			body = "Kerbin"
+			touchdown = 100.0
+			start
+			{
+				latitude = -0.0485981
+				longitude = -74.726413
+				altitude = 67
+			}
+			end
+			{
+				latitude = -0.050185
+				longitude = -74.490867
+				altitude = 67
+			}
+		}
+		Runway	
+		{
+			name = KSC Runway 27
+			body = "Kerbin" // if not set defaults to the starting world (Kerbin, Earth for RSS)
+			touchdown = 100.0 // distance in meters from start point
 			start
 			{
 				latitude = -0.050185
@@ -37,7 +56,9 @@ MechJeb2Landing
 		}
 		Runway	
 		{
-			name = Island runway
+			name = Island Runway 09
+			body = "Kerbin"
+			touchdown = 25.0;
 			start
 			{
 				latitude = -1.517306
@@ -48,6 +69,24 @@ MechJeb2Landing
 			{
 				latitude = -1.515980
 				longitude = -71.852408
+				altitude = 132
+			}
+		}
+		Runway	
+		{
+			name = Island Runway 27
+			body = "Kerbin"
+			touchdown = 25.0;
+			end
+			{
+				latitude = -1.515980
+				longitude = -71.852408
+				altitude = 132
+			}
+			start
+			{
+				latitude = -1.517306
+				longitude = -71.965488
 				altitude = 132
 			}
 		}
