--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ Thumbs.db
 /MechJeb2-Unity/Library/
 /MechJeb2-Unity/*.csproj
 
-*.sln
 
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
@@ -125,3 +124,5 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
+/.vs
+/MechJeb2/.vs/MechJeb2/v15/Server/sqlite3
