adding files to csproj

--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -62,6 +62,12 @@
     <Compile Include="alglib\solvers.cs" />
     <Compile Include="alglib\specialfunctions.cs" />
     <Compile Include="alglib\statistics.cs" />
+    <Compile Include="AttitudeControllers\BaseAttitudeController.cs" />
+    <Compile Include="AttitudeControllers\HybridController.cs" />
+    <Compile Include="AttitudeControllers\KosAttitudeController.cs" />
+    <Compile Include="AttitudeControllers\MJAttitudeController.cs" />
+    <Compile Include="AttitudeControllers\PIDLoop.cs" />
+    <Compile Include="AttitudeControllers\TorquePI.cs" />
     <Compile Include="AutopilotModule.cs" />
     <Compile Include="CelestialBodyExtensions.cs" />
     <Compile Include="CompatibilityChecker.cs" />
@@ -80,7 +86,15 @@
     <Compile Include="LandingAutopilot\PlaneChange.cs" />
     <Compile Include="LandingAutopilot\UntargetedDeorbit.cs" />
     <Compile Include="MechjebBundlesManager.cs" />
+    <Compile Include="MechJebModuleAirplaneAutopilot.cs" />
+    <Compile Include="MechJebModuleAirplaneGuidance.cs" />
+    <Compile Include="MechJebModuleAscentClassic.cs" />
+    <Compile Include="MechJebModuleAscentClassicMenu.cs" />
+    <Compile Include="MechJebModuleAscentGT.cs" />
+    <Compile Include="MechJebModuleAscentGTMenu.cs" />
     <Compile Include="MechJebModuleAscentNavBall.cs" />
+    <Compile Include="MechJebModuleAscentPEG.cs" />
+    <Compile Include="MechJebModuleAscentPEGMenu.cs" />
     <Compile Include="MechJebModuleDebugArrows.cs" />
     <Compile Include="DisplayModule.cs" />
     <Compile Include="FuelFlowSimulation.cs" />
@@ -115,7 +129,6 @@
     <Compile Include="MechJebCore.cs" />
     <Compile Include="MechJebModuleAscentAutopilot.cs" />
     <Compile Include="MechJebModuleAscentGuidance.cs" />
-    <Compile Include="MechJebModuleAscentPathEditor.cs" />
     <Compile Include="MechJebModuleAttitudeAdjustment.cs" />
     <Compile Include="MechJebModuleAttitudeController.cs" />
     <Compile Include="MechJebModuleCustomInfoWindow.cs" />
@@ -165,6 +178,8 @@
     <Compile Include="RCSSolver.cs" />
     <Compile Include="ReentrySimulation.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
+    <Compile Include="ScriptsModule\IMechJebModuleScriptActionContainer.cs" />
+    <Compile Include="ScriptsModule\IMechJebModuleScriptActionsList.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptAction.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionActionGroup.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionActivateEngine.cs" />
@@ -175,18 +190,22 @@
     <Compile Include="ScriptsModule\MechJebModuleScriptActionDockingAutopilot.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionDockingShield.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionExecuteNode.cs" />
-    <Compile Include="ScriptsModule\MechJebModuleScriptActionInterceptWithHohmann.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptActionFor.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptActionIf.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionIRSequencer.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionKos.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionLanding.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionLoadScript.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionManoeuver.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptActionParallel.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionPause.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionQuicksave.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionRCS.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionRendezvous.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionRendezvousAP.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionSAS.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptActionsList.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptActionSmartASS.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionStaging.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionTarget.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionTargetDock.cs" />
@@ -197,6 +216,8 @@
     <Compile Include="ScriptsModule\MechJebModuleScriptActionUndock.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionWaitFor.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptActionWarp.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptActionWhile.cs" />
+    <Compile Include="ScriptsModule\MechJebModuleScriptCondition.cs" />
     <Compile Include="SpeechBubble.cs" />
     <Compile Include="ModExtensionDemo.cs" />
     <Compile Include="ToolbarWrapper.cs" />
