Ship updated LandingSites from El Sancho
And remove the default from the code

--- a/LandingSites.cfg
+++ b/LandingSites.cfg
@@ -1,5 +1,8 @@
 MechJeb2Landing
 {
+	// If you want to clean up the default site then you'll need an MM patch
+	// !MechJeb2Landing:HAS[#id[MechJeb2DefaultLandingSites]] { } 
+	id = MechJeb2DefaultLandingSites
 	LandingSites
 	{	
 		Site
@@ -15,6 +18,32 @@ MechJeb2Landing
 			latitude = -0.09694444
 			longitude = -74.617
 		}
+		Site
+		{
+			name = Desert
+			latitude = -6.515573
+			longitude = -144.039421
+		}
+		Site
+		{
+			name = Woomerang
+			latitude = 45.289698
+			longitude = 136.109897
+		}
+		Site
+		{
+			name = Greater Flats
+			latitude =  -4.794139
+			longitude = -11.575088
+			body = Minmus
+		}
+		Site
+		{
+			name = Negan's Place
+			latitude = -19.669238
+			longitude = 77.936054
+			body = Minmus
+		}	
 	}
 	Runways
 	{
@@ -88,6 +117,42 @@ MechJeb2Landing
 				latitude = -1.517306
 				longitude = -71.965488
 				altitude = 132
+			}
+		}
+		Runway	
+		{
+			name = Desert Runway 18
+			body = Kerbin
+			touchdown = 50.0;
+			start
+			{
+				latitude = -6.448288
+				longitude = -144.038171
+				altitude = 822.05
+			}
+			end
+			{
+				latitude = -6.599329
+				longitude = -144.040598
+				altitude = 821.93
+			}
+		}
+		Runway	
+		{
+			name = Desert Runway 36
+			body = Kerbin
+			touchdown = 150.0;
+			start
+			{
+				latitude = -6.599329
+				longitude = -144.040598
+				altitude = 821.93
+			}
+			end
+			{
+				latitude = -6.448288
+				longitude = -144.038171
+				altitude = 822.05			
 			}
 		}
 	}
