--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -109,6 +109,7 @@
     <Compile Include="CelestialBodyExtensions.cs" />
     <Compile Include="CompatibilityChecker.cs" />
     <Compile Include="ComputerModule.cs" />
+    <Compile Include="ConicStateUtils.cs" />
     <Compile Include="DisplayModule.cs" />
     <Compile Include="FlyingSim\SimulatedParachute.cs" />
     <Compile Include="FlyingSim\SimulatedPart.cs" />
@@ -182,6 +183,7 @@
     <Compile Include="MechJebModuleMenu.cs" />
     <Compile Include="MechJebModuleNodeEditor.cs" />
     <Compile Include="MechJebModuleNodeExecutor.cs" />
+    <Compile Include="MechJebModulePEGController.cs" />
     <Compile Include="MechJebModuleRCSBalancer.cs" />
     <Compile Include="MechJebModuleRCSBalancerWindow.cs" />
     <Compile Include="MechJebModuleRCSController.cs" />
@@ -214,10 +216,13 @@
     <Compile Include="OrbitalManeuverCalculator.cs" />
     <Compile Include="PIDController.cs" />
     <Compile Include="PartExtensions.cs" />
+    <Compile Include="Pontryagin\PontryaginBase.cs" />
+    <Compile Include="Pontryagin\PontryaginLaunch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="RCSSolver.cs" />
     <Compile Include="ReentrySimulation.cs" />
+    <Compile Include="ReflectionUtils.cs" />
     <Compile Include="ScriptsModule\IMechJebModuleScriptActionContainer.cs" />
     <Compile Include="ScriptsModule\IMechJebModuleScriptActionsList.cs" />
     <Compile Include="ScriptsModule\MechJebModuleScriptAction.cs" />
