--- a/Parts/MechJeb2_Pod/part.cfg
+++ b/Parts/MechJeb2_Pod/part.cfg
@@ -50,6 +50,7 @@ PART {
 
     vesselType = Probe
     stagingIcon = COMMAND_POD
+    bulkheadProfiles = size0
     
     // --- internal setup ---
     CrewCapacity = 0
