--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 /MechJeb2/Todo.txt
 
+/MechJeb2/MechJeb2.sln
 
-
-/MechJeb2/MechJeb2.csproj
 Thumbs.db
 
 /MechJeb2-Unity/Library/
 /MechJeb2-Unity/*.csproj
-
-
+/MechJeb2-Unity/*.sln
 
 .vs/*
 
@@ -123,6 +121,4 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-/.vs
 /MechJeb2/.vs/MechJeb2/v15/Server/sqlite3
-/MechJeb2/MechJeb2.csproj.DotSettings
