unlock all techs with MechJebUnlocked
just create an empty folder in GameData called MechJebUnlocked and
then remove the ModuleManager.ConfigCache file to force MM to
refresh.

all techs will be unlocked from the start.

although you still need to do upgrades to get maneuver nodes.

--- a/Parts/MechJebNoCommandPod.cfg
+++ b/Parts/MechJebNoCommandPod.cfg
@@ -1,25 +1,51 @@
-@PART[*]:HAS[@MODULE[ModuleCommand]]:NEEDS[!MechJebUseCommandPod,!RP-0,!RealismOverhaul]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[KerbalEVA]]:NEEDS[!MechJebUseCommandPod,!RP-0,!RealismOverhaul,!MechJebUnlocked]
 {
   %MODULE[MechJebCore]
   {
-    MechJebLocalSettings
+    %MechJebLocalSettings
     {
-      MechJebModuleCustomWindowEditor { unlockTechs = flightControl }
-      MechJebModuleSmartASS { unlockTechs = flightControl }
-      MechJebModuleManeuverPlanner { unlockTechs = advFlightControl }
-      MechJebModuleNodeEditor { unlockTechs = advFlightControl }
-      MechJebModuleTranslatron { unlockTechs = advFlightControl }
-      MechJebModuleWarpHelper { unlockTechs = advFlightControl }
-      MechJebModuleAttitudeAdjustment { unlockTechs = advFlightControl }
-      MechJebModuleThrustWindow { unlockTechs = advFlightControl }
-      MechJebModuleRCSBalancerWindow { unlockTechs = advFlightControl }
-      MechJebModuleRoverWindow { unlockTechs = fieldScience }
-      MechJebModuleAscentGuidance { unlockTechs = unmannedTech }
-      MechJebModuleLandingGuidance { unlockTechs = unmannedTech }
-      MechJebModuleSpaceplaneGuidance { unlockTechs = unmannedTech }
-      MechJebModuleDockingGuidance { unlockTechs = advUnmanned }
-      MechJebModuleRendezvousAutopilotWindow { unlockTechs = advUnmanned }
-      MechJebModuleRendezvousGuidance { unlockTechs = advUnmanned }
+      %MechJebModuleCustomWindowEditor { unlockTechs = flightControl }
+      %MechJebModuleSmartASS { unlockTechs = flightControl }
+      %MechJebModuleManeuverPlanner { unlockTechs = advFlightControl }
+      %MechJebModuleNodeEditor { unlockTechs = advFlightControl }
+      %MechJebModuleTranslatron { unlockTechs = advFlightControl }
+      %MechJebModuleWarpHelper { unlockTechs = advFlightControl }
+      %MechJebModuleAttitudeAdjustment { unlockTechs = advFlightControl }
+      %MechJebModuleThrustWindow { unlockTechs = advFlightControl }
+      %MechJebModuleRCSBalancerWindow { unlockTechs = advFlightControl }
+      %MechJebModuleRoverWindow { unlockTechs = fieldScience }
+      %MechJebModuleAscentGuidance { unlockTechs = unmannedTech }
+      %MechJebModuleLandingGuidance { unlockTechs = unmannedTech }
+      %MechJebModuleSpaceplaneGuidance { unlockTechs = unmannedTech }
+      %MechJebModuleDockingGuidance { unlockTechs = advUnmanned }
+      %MechJebModuleRendezvousAutopilotWindow { unlockTechs = advUnmanned }
+      %MechJebModuleRendezvousGuidance { unlockTechs = advUnmanned }
     }
+  }
+}
+
+@PART[*]:HAS[@MODULE[MechJebCore],!MODULE[KerbalEVA]]:NEEDS[!RP-0,!RealismOverhaul,MechJebUnlocked]
+{
+  %MODULE[MechJebCore]
+  {
+    %MechJebLocalSettings
+    {
+      %MechJebModuleCustomWindowEditor { unlockTechs = start }
+      %MechJebModuleSmartASS { unlockTechs = start }
+      %MechJebModuleManeuverPlanner { unlockTechs = start }
+      %MechJebModuleNodeEditor { unlockTechs = start }
+      %MechJebModuleTranslatron { unlockTechs = start }
+      %MechJebModuleWarpHelper { unlockTechs = start }
+      %MechJebModuleAttitudeAdjustment { unlockTechs = start }
+      %MechJebModuleThrustWindow { unlockTechs = start }
+      %MechJebModuleRCSBalancerWindow { unlockTechs = start }
+      %MechJebModuleRoverWindow { unlockTechs = start }
+      %MechJebModuleAscentGuidance { unlockTechs = start }
+      %MechJebModuleLandingGuidance { unlockTechs = start }
+      %MechJebModuleSpaceplaneGuidance { unlockTechs = start }
+      %MechJebModuleDockingGuidance { unlockTechs = start }
+      %MechJebModuleRendezvousAutopilotWindow { unlockTechs = start }
+      %MechJebModuleRendezvousGuidance { unlockTechs = start }
+    d}
   }
 }
