i missed this one as well
not sure how it worked in my testing with this here...

--- a/Parts/MechJebNoCommandPod.cfg
+++ b/Parts/MechJebNoCommandPod.cfg
@@ -1,4 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[KerbalEVA]]:NEEDS[!MechJebUseCommandPod,!RP-0,!RealismOverhaul,!MechJebUnlocked]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[KerbalEVA]]:NEEDS[!MechJebUseCommandPod,!RP-0,!RealismOverhaul]
 {
   %MODULE[MechJebCore]
   {
